--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.0.0-rc.2",
+    "@mdx-js/react": "^2.0.0-rc.2",
     "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "@types/next-pwa": "^5.6.2",
+    "gray-matter": "^4.0.3",
     "next": "^13.2.4",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-highlight": "^6.0.0",
+    "remark-frontmatter": "^4.0.1",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
